@@ -1159,6 +1159,7 @@ liblvm/liblvm2app.pc
 man/Makefile
 po/Makefile
 scripts/clvmd_init_red_hat
+scripts/lvm2_monitoring_init_red_hat
 scripts/Makefile
 test/Makefile
 test/api/Makefile
