@@ -1,5 +1,6 @@
 Version 2.02.53 - 
 =====================================
+  Update lvm2 monitoring script to lvm2_monitoring_init_red_hat.in.
   Fix lvm2app test to run under test/api subdirectory only when configured.
   Add vg_is_resizeable() and cleanup reference to VG_RESIZEABLE.
 
